translatable/tests/static/args/invalid_identifier.stderr
error: expected identifier
 --> tests/static/args/invalid_identifier.rs:5:49
  |
5 |     translation!("es", static common::greeting, 42 = "value");
  |                                                 ^^
